# haddock-reexport-bug

./: stack.yaml
lib/: lib.cabal
lib/src/: ClassModule.hs  DocModule.hs
user/: user.cabal
user/src/: UserModule.hs
